servo/tests/compiletest/plugin/compile-fail/ban.rs
#
!
[
feature
(
plugin
)
]
#
!
[
plugin
(
script_plugins
)
]
extern
crate
js
;
use
js
:
:
jsval
:
:
JSVal
;
use
std
:
:
cell
:
:
Cell
;
struct
Foo
{
bar
:
Cell
<
JSVal
>
}
fn
main
(
)
{
}
